updated with width auto

--- a/static/lib/ngreactions/css/font-reaction/font-reactions.css
+++ b/static/lib/ngreactions/css/font-reaction/font-reactions.css
@@ -380,7 +380,7 @@ input::-moz-focus-inner {
 .drop-shadow {
     position: relative;
     float: left;
-    width: 20%;
+    width: auto;
     padding: 1em;
     background: #fff;
     -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
